<resources>
    <string name="app_name">The Collector</string>

    <string name="hello_message">Hello User!</string>
    <string name="collections_button">Your Collections</string>
    <string name="find_collections_button">Find a Collection</string>
    <string name="create_collection_button">Create a Collection</string>

    <string name="collections_heading">Your Collections</string>

    <string name="action_settings">Go to Main</string>
    <string name="title_activity_collections">The Collector</string>
    <string name="go_to_login">Go to Login</string>
    <string name="title_activity_items">The Collector</string>

    <string name="title_activity_header">Sign In</string>
    <string name="sign_in_error">eMail or password is incorrect</string>
    <string name="register_user_message">No account yet?</string>
    <string name="register_user_button">Register User</string>

    <string name="register_user_activity_header">Register User</string>
    <string name="register_user_name">Name</string>
    <string name="register_user_email">eMail</string>
    <string name="register_user_password">Password</string>
    <string name="register_user_reenter_password">Re-enter Password</string>
    <string name="register_user_password_error">Passwords do not match!</string>
    <string name="register_user_fields_error">All fields are required!</string>
    <string name="register_user_taken_error">eMail already in use!</string>
    <string name="register_user_submit_button">Register</string>

    <string name="add_user_item_button">Add Item</string>

    <string name="hello_world">Hello world!</string>
    <string name="find_heading">Find a Collection</string>
    <string name="search_text">Search for Collections...</string>
    <string name="search_button">Search</string>

    <string name="create_collection_heading">Create a Collection</string>
    <string name="buttons_heading">Buttons *Button One Required</string>
    <string name="name_and_button_error">Name and Button One must be filled out!</string>
    <string name="submit_collection_button">Create Collection</string>

    <string name="add_items_heading">Add Items to </string>
    <string name="add_items_button">Add Item</string>
    <string name="add_items_image_button">Select Image...</string>
    <string name="add_items_image_message">Coming Soon!</string>
    <string name="delete_items_button">Delete</string>
    <string name="buy_item_button">Buy It</string>
    <string name="add_item_message">Item added!</string>
    <string name="add_items_home_button">Go to Collections</string>
    <string name="empty_name_error">Item name cannot be empty!</string>

    <string name="add_collection_button">Add This Collection</string>
    <string name="collection_added_text">Collection Added!</string>

    <string name="title_activity_login">The Collector</string>
    <string name="title_activity_find_collection">The Collector</string>
    <string name="title_activity_items_after_search">The Collector</string>
    <string name="title_activity_register_user">The Collector</string>
    <string name="title_activity_create_collection">The Collector</string>
    <string name="title_activity_add_items">The Collector</string>
</resources>
