<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.fangman.austin.thecollector.CreateCollectionActivity"
    android:background="@drawable/background">

    <TextView android:text="@string/create_collection_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Base.TextAppearance.AppCompat.Display1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/createCollectionHeading"
        android:textColor="@android:color/white" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextCollectionName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="95dp"
        android:hint="Name"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:focusable="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="false"
        android:layout_alignWithParentIfMissing="false" />

    <TextView
        android:text="@string/buttons_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/buttonsHeading"
        android:textColor="@android:color/white"
        android:layout_below="@+id/editTextCollectionName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:id="@+id/editTextButton1"
        android:hint="Button One Text*"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:focusable="true"
        android:layout_alignWithParentIfMissing="false"
        android:layout_below="@+id/editTextCollectionName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextButton2"
        android:hint="Button Two Text"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:focusable="true"
        android:layout_alignWithParentIfMissing="false"
        android:layout_below="@+id/editTextButton1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextButton3"
        android:hint="Button Three Text"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:focusable="true"
        android:layout_alignWithParentIfMissing="false"
        android:layout_below="@+id/editTextButton2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_collection_button"
        android:id="@+id/submitCollectionButton"
        android:layout_below="@+id/editTextButton3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_and_button_error"
        android:id="@+id/nameAndButtonError"
        android:layout_below="@+id/submitCollectionButton"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/holo_red_light"
        android:visibility="gone" />

</RelativeLayout>
